# openfang

./: CLAUDE.md  Cargo.toml
__docs/: cron-delivery-schema.md  cron-reentrancy-lock.md  persist-user-installed-hand-templates.md  prompt-caching-support.md  workflow-approval-gates.md
agents/assistant/: agent.toml
crates/openfang-api/src/: channel_bridge.rs  routes.rs  server.rs
crates/openfang-channels/src/: discord.rs  slack.rs
crates/openfang-cli/src/: main.rs
crates/openfang-cli/src/tui/: event.rs
crates/openfang-extensions/integrations/: docs_mcp.toml
crates/openfang-extensions/src/: bundled.rs  installer.rs  registry.rs
crates/openfang-hands/src/: bundled.rs  lib.rs  registry.rs
crates/openfang-kernel/src/: approval.rs  cron.rs  heartbeat.rs  kernel.rs  lib.rs  mcp_bridge.rs  mcp_bridge_server.rs  metering.rs  wizard.rs  workflow.rs
crates/openfang-kernel/tests/: workflow_integration_test.rs
crates/openfang-mcp-bridge/: Cargo.toml
crates/openfang-mcp-bridge/src/: main.rs
crates/openfang-memory/src/: migration.rs  usage.rs
crates/openfang-runtime/: Cargo.toml
crates/openfang-runtime/src/: agent_loop.rs  code_search.rs  compactor.rs  kernel_handle.rs  lib.rs  llm_driver.rs  mcp.rs  mcp_server.rs  model_catalog.rs  process_manager.rs  routing.rs  str_utils.rs  subprocess_sandbox.rs  tool_runner.rs  workspace_sandbox.rs
crates/openfang-types/: Cargo.toml
crates/openfang-types/src/: agent.rs  approval.rs  config.rs  error.rs  lib.rs  mcp.rs  message.rs  scheduler.rs
scripts/: check-openfang-specialist-facts.sh
(+12 files in other folders)
